Update JDK version to 17